--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,9 @@
             <properties>
                 <spring.active>test</spring.active>
             </properties>
+<!--            <activation>-->
+<!--                <activeByDefault>true</activeByDefault>-->
+<!--            </activation>-->
         </profile>
         <profile>
             <id>show</id>
