--- a/siam-monitor/src/main/resources/application-local.yml
+++ b/siam-monitor/src/main/resources/application-local.yml
@@ -23,9 +23,9 @@ spring:
 
   #邮件相关配置
   mail:
-    host: smtp.126.com
-    password: siam1026@163.com
-    username: siam1026@163.com
+    host: smtp.mxhichina.com
+    username: do_not_reply@iaexp.com
+    password: System2015!!
     properties:
       mail:
         smtp:
