--- a/uniapp-siam-user/manifest.json
+++ b/uniapp-siam-user/manifest.json
@@ -42,7 +42,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "wx5dd1aa2db73644e9",
+        "appid" : "wxcf774037b6fb9935",
         "setting" : {
             "urlCheck" : false,
             "ignoreDevUnusedFiles" : false,
