--- a/uniapp-siam-user/package.json
+++ b/uniapp-siam-user/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@vant/area-data": "^1.5.1",
+    "@vant/weapp": "^1.11.7",
     "js-base64": "^3.7.5",
-    "vant": "^4.8.1"
+    "vant": "^4.8.1",
+    "vant-weapp": "^0.5.29"
   }
 }
