--- a/uniapp-siam-user/project.config.json
+++ b/uniapp-siam-user/project.config.json
@@ -41,7 +41,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.16.1",
-	"appid": "wx5dd1aa2db73644e9",
+  "appid": "wxcf774037b6fb9935",
   "projectname": "(server) uniapp-siam-user",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
