--- a/vue-siam-admin/package.json
+++ b/vue-siam-admin/package.json
@@ -54,7 +54,8 @@
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "fsevents": "^1.2.7"
   },
   "browserslist": [
     "> 1%",
