--- a/vue-siam-shop/package.json
+++ b/vue-siam-shop/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.9.0",
     "element-ui": "^2.8.2",
     "jquery": "^3.5.1",
+    "fsevents": "^1.2.7",
     "quill": "^1.3.6",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
