--- a/siam-system/system-provider/src/main/resources/application-local.yml
+++ b/siam-system/system-provider/src/main/resources/application-local.yml
@@ -271,3 +271,7 @@ logging:
     name: ./logs/${spring.application.name}/log_info.log
 path:
   log: ./logs/${spring.application.name}/
+
+baidu:
+  map:
+    ak: jiPYrsPFCwBldUlX8icc493KSZ6yoWcw
